--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,7 +205,7 @@ main {
 
 /* Formacion */
 .formaciones__col {
-  padding: 3.8rem 0 5.5rem 0;
+  padding: 3.8rem 0 3rem 0;
 }
 
 .formaciones__conteiner {
@@ -287,4 +287,112 @@ main {
   margin-left: 2rem;
   margin-top: -0.5rem;
   color: #464646;
+}
+
+/* Proyectos */
+.proyectos {
+  padding: 3.8rem 0 6.5rem 0;
+}
+
+.proyectos__titulo {
+  padding: 1rem 0 5.5rem 0;
+}
+
+.proyectos__row {
+  /* width: 90%;
+  margin: 0 auto; */
+  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.05), inset -5px -5px 5px rgba(255, 255, 255, 0.05), 5px 5px 5px rgba(0, 0, 0, 0.05), -5px -5px 5px rgba(255, 255, 255, 0.05);
+  border-radius: 40px 0 40px 0px;
+}
+
+.proyectos__col {
+  padding: 1rem 0 1rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* .proyectos__conteiner {
+  display: flex;
+  align-items: center;
+  width: 70%;
+  height: 430px;
+  padding: 0px;
+  gap: 28px;
+  background-color: #fff;
+  border-radius: 1.7rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+} */
+
+.conteiner__proyecto {
+  width: 90%;
+  height: auto;
+  background-color: hsla(0, 0%, 46%, .2);
+  border-radius: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  overflow: hidden;
+}
+
+.proyecto__imagen {
+  width: 100%;
+  height: 344px;
+}
+
+.proyecto__descripcion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 90%;
+  height: auto;
+  padding-top: 1rem;
+}
+
+.proyecto__titulo {
+  color: #2d2e32;
+  font-weight: bold;
+  font-size: 1.7rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.proyecto__info {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 25px;
+  color: #464646;
+}
+
+.badges-contenedor {
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: .8rem;
+}
+
+.enlace__lista {
+  display: flex;
+  margin-top: 2rem;
+  list-style: none;
+}
+
+.enlace__item {
+  padding: 0 2rem 0 2rem;
+}
+
+.enlace__link {
+  display: flex;
+  align-items: center;
+  color: #2d2e32;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.icono__enlace {
+  font-size: 2rem;
+  padding-left: .5rem;
+}
+
+.enlace__lista .enlace__link:hover {
+  color: #0077B5;
 }
