--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -410,16 +410,16 @@ main {
 .contacto__imagen {
   position: absolute;
   z-index: -1;
-  top: 4.5rem;
-  right: 2rem;
-  width: 100%;
-  height: 200px;
+  top: 5rem;
+  right: 3.5rem;
+  width: 110%;
+  height: 280px;
 }
 
 .contacto__col h1 {
   font-weight: 700;
   font-size: 2rem;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
   color: #00B6F0;
 }
 
@@ -427,7 +427,7 @@ main {
   font-weight: 570;
   font-size: 1rem;
   line-height: 25px;
-  margin-left: 5rem;
+  /* margin-left: 5rem; */
   color: #464646;
 }
 
@@ -439,8 +439,8 @@ main {
   box-shadow: 4px 4px 26px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   margin: 15px 10px;
-  width: 45.1%;
-  height: 35px;
+  width: 46%;
+  height: 55px;
 }
 
 .input__padron::placeholder {
@@ -450,7 +450,7 @@ main {
 
 .input__padron--texta:focus,
 .input__padron:focus {
-  border: 1px solid #c5d0d5;
+  border: 1px solid #97dffc;
 }
 
 .input__padron--modificado {
@@ -475,7 +475,7 @@ main {
 
 input,
 textarea {
-  font-size: .9rem;
+  font-size: 1rem;
   text-align: left;
   padding-left: 15px;
   resize: none;
@@ -499,7 +499,6 @@ textarea {
   font-weight: 500;
   display: flex;
   justify-content: center;
-  align-items: center;
   cursor: pointer;
   transition: .3s ease;
   border-radius: 6px;
