--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@ main {
   color: black;
 }
 
-.quien__soy--resaltar {
+.quien h2 span {
   color: #00B6F0;
 }
 
@@ -201,6 +201,10 @@ main {
 
 .hobbie__imagen {
   width: 20%;
+}
+
+.seccion__clara {
+  color: black;
 }
 
 /* Formacion */
@@ -565,4 +569,38 @@ textarea {
     transform: rotate(45deg);
     left: calc(100% + 48px);
   }
+}
+
+/* Banner Día o noche*/
+
+.banner.night,
+.navbar.night {
+  background-color: #000;
+}
+
+.banner.night .nav__color:nth-child(2) {
+  display: block;
+}
+
+.navbar.night .banner__nombre,
+.navbar.night .nav-link,
+.banner.night .quien__soy,
+.banner.night .skills__lista span,
+.banner.night .seccion__clara,
+.banner.night .enlace__link,
+.banner.night .contacto__col p {
+  color: #fff;
+}
+
+.banner.night .enlace__link:hover {
+  color: #0077B5;
+}
+
+.banner.night .carousel-indicators button {
+  background-color: #fff;
+}
+
+.banner.night .carousel-dark .carousel-control-next-icon,
+.banner.night .carousel-dark .carousel-control-prev-icon {
+  filter: hue-rotate(0deg);
 }
