--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -27,11 +27,11 @@ header {
 }
 
 .navbar-nav {
-  padding-right: 2rem;
+  padding-right: .5rem;
 }
 
 .navbar-brand {
-  padding-left: 2rem;
+  padding-left: .5rem;
 }
 
 
@@ -114,4 +114,11 @@ header {
 
 .nav__link--negrita {
   font-weight: bold;
+}
+
+@media screen and (max-width: 991px) {
+  .navbar {
+    padding: 2rem 2rem .5rem 2rem;
+  }
+
 }
