--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -121,4 +121,26 @@ header {
     padding: 2rem 2rem .5rem 2rem;
   }
 
+  .banner.night .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  }
+
+  .banner.night .navbar-toggler {
+    border: 1px solid #fff;
+  }
+
+  .navbar-collapse {
+    margin-top: 1rem;
+  }
+
+  .nav-link.active::after {
+    width: 100%;
+    left: 0px;
+  }
+  
+  .nav-link.active::before {
+    width: 100%;
+    right: 0px;
+  }
+  
 }
