--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -191,6 +191,7 @@ main {
 .carousel {
   margin-top: 4rem;
   width: 50%;
+  border: 2px solid rebeccapurple;
 }
 
 .carousel-item {
@@ -210,6 +211,7 @@ main {
 
 .seccion__clara {
   color: black;
+  padding-bottom: 4rem;
 }
 
 /* Formacion */
@@ -635,6 +637,31 @@ textarea {
   box-shadow: rgba(255, 255, 255, 0.4) 3px 3px 3px inset, rgba(255, 255, 255, 0.4) 3px 3px 3px;
 }
 
+@media screen and (min-width: 1900px) {
+  .contenedor__imagen {
+    margin-top: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1696px) and (max-width: 1899px) {
+  .contenedor__imagen {
+    margin-top: 4rem;
+  }
+}
+
+@media screen and (min-width: 1456px) and (max-width: 1695px) {
+  .contenedor__imagen {
+    margin-top: 5.5rem;
+  }
+}
+
+@media screen and (max-width: 1295px) {
+  .contenedor__imagen {
+    margin-top: 7rem;
+  }
+  
+}
+
 @media screen and (min-width: 1125px) {
   .logo__perfil {
     width: 390px;
@@ -674,6 +701,9 @@ textarea {
     padding-top: .7rem;
   }
 
+  .carousel {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 991px) {
@@ -698,6 +728,13 @@ textarea {
     padding: 0 2rem 0 2rem;
   }
 
+  .contenedor__imagen {
+    margin-top: 8rem;
+  }
+
+  .seccion__clara {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 882px) {
@@ -771,6 +808,15 @@ textarea {
     width: 50px;
     height: 50px;
   }
+
+  .contenedor__imagen {
+    margin-top: 10rem;
+  }
+
+  .hobbie__imagen {
+    width: 25%;
+  }
+  
 }
 
 @media screen and (max-width: 435px) {
