--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -12,9 +12,9 @@ footer {
 }
 
 .footer__conten {
-  align-items: center;
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 
 .derechos__autor {
@@ -28,12 +28,38 @@ footer {
   gap: 2rem;
 }
 
-.icon__item{
+.icon__item {
   list-style: none;
   text-decoration: none;
 }
 
-.icon__link{
+.icon__link {
   font-size: 1.5rem;
   color: #fff;
+}
+
+@media screen and (min-width: 744px) {
+  .icon {
+    margin-top: .6rem;
+  }
+}
+
+@media screen and (max-width: 743px) {
+  .footer__conten {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .icon {
+    margin-top: 1.5rem;
+  }
+
+}
+
+@media screen and (max-width: 632px) {
+  .derechos__autor {
+    font-size: .9rem;
+    text-align: center;
+  }
 }
