--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -554,6 +554,10 @@ textarea {
   width: 100%;
 }
 
+.btn__Enviar .icon {
+  margin-top: 0;
+}
+
 @keyframes animateRocket {
 
   0%,
@@ -637,23 +641,6 @@ textarea {
   box-shadow: rgba(255, 255, 255, 0.4) 3px 3px 3px inset, rgba(255, 255, 255, 0.4) 3px 3px 3px;
 }
 
-/* @media screen and (min-width: 1900px) {
-  .contenedor__imagen {
-    margin-top: 2.5rem;
-  }
-}
-
-@media screen and (min-width: 1696px) and (max-width: 1899px) {
-  .contenedor__imagen {
-    margin-top: 4rem;
-  }
-}
-
-@media screen and (min-width: 1456px) and (max-width: 1695px) {
-  .contenedor__imagen {
-    margin-top: 5.5rem;
-  }
-} */
 @media screen and (min-width: 2096px) {
   .contenedor__imagen {
     margin-top: 0rem;
@@ -990,12 +977,12 @@ textarea {
 }
 
 
-@media screen and (max-width: 743px) {
+/* @media screen and (max-width: 743px) {
   .btn__Enviar .icon {
     margin-top: 0;
   }
 
-}
+} */
 
 @media screen and (max-width: 630px) {
   .hobbie__imagen {
